Ajax request, onkeyup macht noch nicht, was es sollte - Joel

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,5 @@
 <ul>
-  <li><div id="code"><input class="code-field" type="text" name="code" placeholder="ICD Code"></div>
+  <li><div id="code"><input class="code-field" type="text" name="code" placeholder="ICD Code" onkeyup="sendRequest()"></div>
     <ul>
       <li><div id="syn">Synonyme</div></li>
       <li><div id="cat">Fachrichtung</div>
