Part 1 of the UI work: basic & ugly display of API responses

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
 <ul>
-  <li><div id="code"><input class="code-field" type="text" name="code" placeholder="ICD Code" onkeyup="sendRequest()"></div>
-    <ul>
+  <li><div id="code"><input class="code-field" id="code-name" type="text" name="code" placeholder="ICD Code" onkeyup="sendRequest()"></div>
+    <!--<ul>
       <li><div id="syn">Synonyme</div></li>
       <li><div id="cat">Fachrichtung</div>
         <ul>
@@ -16,6 +16,6 @@
       <li><div id="super">Oberklasse</div></li>
       <li><div id="drg">DRG</div></li>
       <li><div id="exklusiva">Exklusiva</div></li>
-    </ul>
+    </ul>-->
   </li>
 </ul>
