--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,10 +1,11 @@
 <div id="code"><input id="code-name" type="text" placeholder="ICD Code"></div>
-<div class="legend" style="margin: 10px">
-  <div class="syn">Synonyme</div>
-  <div class="cat">Fachrichtung</div>
-  <div class="doc">Doktor A</div>
-  <div class="super">Oberklasse</div>
-  <div class="drg">DRG</div>
-  <div class="exclusiva">Exklusiva</div>
-  <div class="inclusiva">Inklusiva</div>
+<div id="legend">
+  <h1>Legende</h1>
+  <div class="syn legend">Synonyme</div>
+  <div class="cat legend">Fachrichtung</div>
+  <div class="doc legend">Doktor A</div>
+  <div class="super legend">Oberklasse</div>
+  <div class="drg legend">DRG</div>
+  <div class="exclusiva legend">Exklusiva</div>
+  <div class="inclusiva legend">Inklusiva</div>
 </div>
