--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,62 +1,88 @@
 body {
-  background:#fff;
+    background: #fff;
 }
+
 .js-mindmap-active div.node {
-  /*background:#f5f5f5;
-  border: 2px solid #e3e3e3;
-  -webkit-border-radius: 20px;
-  -webkit-border-radius: 20px;
-  -moz-border-radius: 20px;
-  -moz-border-radius: 20px;
-  border-radius: 20px;*/
+    /*background:#f5f5f5;
+    border: 2px solid #e3e3e3;
+    -webkit-border-radius: 20px;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -moz-border-radius: 20px;
+    border-radius: 20px;*/
 }
 
 div.node div {
-  -webkit-border-radius: 20px;
-  -webkit-border-radius: 20px;
-  -moz-border-radius: 20px;
-  -moz-border-radius: 20px;
-  border-radius: 20px;
-  background: #eee;
+    /*-webkit-border-radius: 20px;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -moz-border-radius: 20px;
+    border-radius: 20px;*/
+    background: #eee;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin: 5px;
 }
+
 .js-mindmap-active div.node.active {
-  padding:5px 10px !important;
-  border-width:5px !important;
+    padding: 5px 10px !important;
+    border-width: 5px !important;
 }
+
 .js-mindmap-active div.node.activeparent {
-  padding:5px 10px !important;
-  border-width:5px !important;
-  background:#cccccc;
-}
-.code-field{
- border: none;
- background: none;
+    padding: 5px 10px !important;
+    border-width: 5px !important;
+    background: #cccccc;
 }
 
-.syn{
-  border: 2px solid black;
+.code-field {
+    border: none;
+    background: none;
 }
 
-.cat{
-  border: 2px solid blue;
+.syn {
+    border-radius: 20px;
+    background: #eee;
+    border: 2px solid black;
 }
 
-.drg{
-  border: 2px solid red;
+.cat {
+    border-radius: 20px;
+    border: 3px double blue;
 }
 
-.exclusiva{
-  border: 2px solid green;
+.drg {
+    border-radius: 20px;
+    border: 2px dashed red;
 }
 
-.inclusiva{
-  border: 2px solid yellow;
+.exclusiva {
+    border-radius: 20px;
+    border: 2px dotted green;
 }
 
-.super{
-  border: 2px solid gray;
+.inclusiva {
+    border-radius: 20px;
+    border: 2px solid yellow;
 }
 
-.legend{
-  width: 200px;
+.super {
+    border: 2px solid gray;
+}
+
+.legend {
+    margin: 10px;
+}
+
+#legend {
+    width: 200px;
+    margin: 10px;
+    border: 1px solid black;
+    padding: 10px;
+    right: 0px;
+    position: absolute;
+}
+
+h1{
+    margin-top: 5px;
 }
