another round of css

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,5 @@
-<div id="code"><input id="code-name" type="text" placeholder="ICD Code"></div>
+<div id="search-bar"><input id="code-name" type="text" placeholder="ICD Code"></div>
 <div id="legend">
-  <h1>Legende</h1>
   <div class="syn legend">Synonyme</div>
   <div class="cat legend">Fachrichtung</div>
   <div class="doc legend">Doktor A</div>
