--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,23 +1,19 @@
 body {
     background: #fff;
+    padding:0;
 }
 
-.js-mindmap-active div.node {
-    /*background:#f5f5f5;
+.root{
+    background:#f5f5f5;
     border: 2px solid #e3e3e3;
     -webkit-border-radius: 20px;
     -webkit-border-radius: 20px;
     -moz-border-radius: 20px;
     -moz-border-radius: 20px;
-    border-radius: 20px;*/
+    border-radius: 20px;
 }
 
 div.node div {
-    /*-webkit-border-radius: 20px;
-    -webkit-border-radius: 20px;
-    -moz-border-radius: 20px;
-    -moz-border-radius: 20px;
-    border-radius: 20px;*/
     background: #eee;
     padding-left: 15px;
     padding-right: 15px;
@@ -42,7 +38,6 @@ div.node div {
 
 .syn {
     border-radius: 20px;
-    background: #eee;
     border: 2px solid black;
 }
 
@@ -63,7 +58,7 @@ div.node div {
 
 .inclusiva {
     border-radius: 20px;
-    border: 2px solid yellow;
+    border: 2px solid orange;
 }
 
 .super {
@@ -72,15 +67,38 @@ div.node div {
 
 .legend {
     margin: 10px;
+    padding-left: 10px;
 }
 
 #legend {
     width: 200px;
     margin: 10px;
-    border: 1px solid black;
+    border: 1px dashed #c5c5c5;
     padding: 10px;
-    right: 0px;
+    right: 0;
     position: absolute;
+    border-radius: 20px;
+    top: 50px;
+}
+
+#search-bar {
+    position: absolute;
+    width: 100%;
+    height: 50px;
+    background: #f5f5f5;
+    border-bottom: 1px solid #c5c5c5;
+    top: 0;
+    left:0;
+}
+
+#code-name{
+    width: 200px;
+    height: 25px;
+    margin-top: 10px;
+    margin-left: 15px;
+    border-radius: 15px;
+    border: 1px solid #cccccc;
+    padding-left: 15px;
 }
 
 h1{
