--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -15,3 +15,4 @@
   <div class="exclusiva legend"><%=t :exclusiva %></div>
   <div class="inclusiva legend"><%=t :inclusiva %></div>
 </div>
+<div id="mindmap"></div>
