--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,18 +1,30 @@
-<div id="search-bar">
-  <input id="code-name" type="text" placeholder="ICD Code">
-  <select name="lang" id="lang" size="1">
-    <option value="de">Deutsch</option>
-    <option value="fr">Français</option>
-    <option value="it">Italiano</option>
-  </select>
-</div>
-<div id="legend">
-  <div class="syn legend"><%=t :syn %></div>
-  <div class="cat legend"><%=t :cat %></div>
-  <div class="doc legend"><%=t :doc %></div>
-  <div class="super legend"><%=t :super %></div>
-  <div class="drg legend"><%=t :drg %></div>
-  <div class="exclusiva legend"><%=t :exclusiva %></div>
-  <div class="inclusiva legend"><%=t :inclusiva %></div>
-</div>
-<div id="mindmap"></div>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>OrangeProton</title>
+        <%= stylesheet_link_tag    "application", :media => "all" %>
+        <%= javascript_include_tag "application" %>
+        <%= csrf_meta_tags %>
+        <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.15/jquery-ui.min.js"></script>
+    </head>
+    <body>
+        <div id="search-bar">
+            <input id="code-name" type="text" placeholder="ICD Code">
+            <select name="lang" id="lang" size="1">
+                <option value="de">Deutsch</option>
+                <option value="fr">Français</option>
+                <option value="it">Italiano</option>
+            </select>
+        </div>
+        <div id="legend">
+            <div class="syn legend"><%=t :syn %></div>
+            <div class="cat legend"><%=t :cat %></div>
+            <div class="doc legend"><%=t :doc %></div>
+            <div class="super legend"><%=t :super %></div>
+            <div class="drg legend"><%=t :drg %></div>
+            <div class="exclusiva legend"><%=t :exclusiva %></div>
+            <div class="inclusiva legend"><%=t :inclusiva %></div>
+        </div>
+        <div id="mindmap"></div>
+    </body>
+</html>
