--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -14,6 +14,7 @@
                 <option value="de">Deutsch</option>
                 <option value="fr">Français</option>
                 <option value="it">Italiano</option>
+                <option value="en">English</option>
             </select>
         </div>
         <div id="legend">
