--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -103,17 +103,32 @@ div.node div {
 }
 
 #lang{
-    position: absolute;
-    right:0;
-    margin-top: 15px;
-    margin-right: 10px;
-    width: 100px;
+    background: transparent;
+    width: 108px;
+    line-height: 1;
+    border: 0;
+    border-radius: 0;
+    padding: 5px 5px 5px 15px;
+    height: 25px;
+    -webkit-appearance: none;
+}
+
+.hide-arrow{
+    margin-top: 10px;
     border: 1px solid #cccccc;
+    display: inline;
+    position: absolute;
+    right:10px;
+    background: url(arrow.png) no-repeat right white;
+    width: 100px;
+    height: 25px;
+    overflow: hidden;
+    border-radius: 15px;
 }
 
 #mindmap{
     position: absolute;
     top:51px;
     height:100%;
-    width: 100%;
+    width: 99%;
 }
