Mindmap experiment #1. Will fix it on thursday, march 28

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,6 +6,7 @@
         <%= javascript_include_tag "application" %>
         <%= csrf_meta_tags %>
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.15/jquery-ui.min.js"></script>
+        <script type="text/javascript" src="https://raw.github.com/LukasSkywalker/js-helpers/master/arrayHelpers.js"></script>
     </head>
     <body>
         <div id="search-bar">
