Solves issue #65 , adds localization to ui elements

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,6 +8,7 @@
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.15/jquery-ui.min.js"></script>
         <script type="text/javascript" src="https://raw.github.com/LukasSkywalker/js-helpers/master/arrayHelpers.js"></script>
         <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
+
     </head>
     <body>
         <div id="search-bar">
@@ -21,15 +22,7 @@
                 </select>
             </div>
         </div>
-        <div id="legend">
-            <div class="syn legend"><%=t :syn %></div>
-            <div class="cat legend"><%=t :cat %></div>
-            <div class="doc legend"><%=t :doc %></div>
-            <div class="super legend"><%=t :super %></div>
-            <div class="drg legend"><%=t :drg %></div>
-            <div class="exclusiva legend"><%=t :exclusiva %></div>
-            <div class="inclusiva legend"><%=t :inclusiva %></div>
-        </div>
+        <div id="legend">Bla </div>
         <div id="mindmap"></div>
     </body>
 </html>
