Fix various little UI bugs

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -22,7 +22,7 @@
                 </select>
             </div>
         </div>
-        <div id="legend">Bla </div>
+        <div id="legend"></div>
         <div id="mindmap"></div>
     </body>
 </html>
