--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -19,7 +19,8 @@ div.node {
     padding-right: 15px;
     margin: 5px;
     max-width: 250px;
-    word-break: break-word;
+    word-break: break-all;
+    word-wrap: break-word;
 }
 
 .js-mindmap-active div.node.active {
@@ -48,9 +49,8 @@ div.node {
     border: 3px double blue;
 }
 
-.cat-button{
-    background: transparent;
-    border-style: hidden;
+.cat:hover{
+    cursor: pointer;
 }
 
 .drg {
