--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,7 +5,8 @@
         <%= stylesheet_link_tag    "application", :media => "all" %>
         <%= javascript_include_tag "application" %>
         <%= csrf_meta_tags %>
-        <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.15/jquery-ui.min.js"></script>
+        <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="stylesheet" type="text/css"/>
+        <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>
         <script type="text/javascript" src="https://raw.github.com/LukasSkywalker/js-helpers/master/arrayHelpers.js"></script>
         <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
 
@@ -24,5 +25,20 @@
         </div>
         <div id="legend"></div>
         <div id="mindmap"></div>
+        <div id="admin">
+          <p class="provider">Manual</p>
+          <p id="slider1" class="slider"></p>
+          <p class="provider">MDC</p>
+          <p id="slider2" class="slider"></p>
+          <p class="provider">Range</p>
+          <p id="slider3" class="slider"></p>
+          <p class="provider">Thesaur</p>
+          <p id="slider4" class="slider"></p>
+          <p class="provider">StringMatch</p>
+          <p id="slider5" class="slider"></p>
+          <p class="provider">Bing</p>
+          <p id="slider6" class="slider"></p>
+          <input type="button" onclick="sendAdmin();" value="Send">
+        </div>
     </body>
 </html>
