some little improvements to the admin panel

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -25,20 +25,6 @@
         </div>
         <div id="legend"></div>
         <div id="mindmap"></div>
-        <div id="admin">
-          <p class="provider">Manual</p>
-          <p id="slider1" class="slider"></p>
-          <p class="provider">MDC</p>
-          <p id="slider2" class="slider"></p>
-          <p class="provider">Range</p>
-          <p id="slider3" class="slider"></p>
-          <p class="provider">Thesaur</p>
-          <p id="slider4" class="slider"></p>
-          <p class="provider">StringMatch</p>
-          <p id="slider5" class="slider"></p>
-          <p class="provider">Bing</p>
-          <p id="slider6" class="slider"></p>
-          <input type="button" onclick="sendAdmin();" value="Send">
-        </div>
+        <div id="admin"></div>
     </body>
 </html>
