--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,10 +1,11 @@
 body {
     background: #fff;
-    padding:0;
+    padding: 0;
+    font-family: sans-serif;
 }
 
-.root{
-    background:#f5f5f5;
+.root {
+    background: #f5f5f5;
     border: 2px solid #e3e3e3;
     -webkit-border-radius: 20px;
     -webkit-border-radius: 20px;
@@ -48,7 +49,7 @@ div.node {
     border: 3px double blue;
 }
 
-.cat:hover{
+.cat: hover {
     cursor: pointer;
 }
 
@@ -89,11 +90,11 @@ div.node {
     font-size: 10px;
 }
 
-.provider{
+.provider {
     font-size: 15px;
 }
 
-.doc{
+.doc {
     border-radius: 20px;
     border: 1px dashed darkviolet;
 }
@@ -116,20 +117,21 @@ div.node {
     background: #f5f5f5;
     border-bottom: 1px solid #c5c5c5;
     top: 0;
-    left:0;
+    left: 0;
 }
 
-#code-name{
+#code-name {
     width: 200px;
-    height: 25px;
+    height: 28px;
     margin-top: 10px;
     margin-left: 15px;
     border-radius: 15px;
     border: 1px solid #cccccc;
     padding-left: 15px;
+    float:left;
 }
 
-#lang{
+#lang {
     background: transparent;
     width: 125px;
     line-height: 1;
@@ -140,22 +142,24 @@ div.node {
     -webkit-appearance: none;
 }
 
-.hide-arrow{
+.hide-arrow {
     margin-top: 10px;
     border: 1px solid #cccccc;
     display: inline;
     position: absolute;
-    right:10px;
+    right: 10px;
     background: url(arrow.png) no-repeat right white;
     width: 100px;
-    height: 25px;
+    padding-top: 3px;
+    height: 27px;
     overflow: hidden;
     border-radius: 15px;
+    float: right;
 }
 
-#mindmap{
+#mindmap {
     position: absolute;
-    top:51px;
-    height:100%;
+    top: 51px;
+    height: 100%;
     width: 99%;
 }
