--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -49,7 +49,7 @@ div.node {
     border: 3px double blue;
 }
 
-.cat: hover {
+.cat:hover {
     cursor: pointer;
 }
 
@@ -108,6 +108,7 @@ div.node {
     position: absolute;
     border-radius: 20px;
     top: 50px;
+    z-index: 10;
 }
 
 #search-bar {
