--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -12,6 +12,7 @@
     <body>
         <div id="search-bar">
             <input id="code-name" type="text" placeholder="ICD Code">
+            <input type="button" id="search-button" value="Suchen" onclick="mindmapper.sendRequest($('#code-name').val().toUpperCase(), $('#lang').val());">
             <div class="hide-arrow">
               <select name="lang" id="lang" size="1">
                     <option value="de">Deutsch</option>
