--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,6 +7,7 @@
         <%= javascript_include_tag "application" %>
         <%= csrf_meta_tags %>
         <script type="text/javascript" src="https://raw.github.com/LukasSkywalker/js-helpers/master/arrayHelpers.js"></script>
+        <script type="text/javascript" src="https://raw.github.com/LukasSkywalker/js-helpers/master/stringHelpers.js"></script>
         <script type="text/javascript" src="https://raw.github.com/DmitryBaranovskiy/raphael/master/raphael-min.js"></script>
     </head>
     <body>
