Combine hover rules

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -39,7 +39,7 @@ div.node {
     border: 3px double blue;
 }
 
-.cat:hover {
+.cat:hover, .super:hover, .sub:hover {
     cursor: pointer;
 }
 
@@ -62,17 +62,10 @@ div.node {
     border: 2px solid gray;
 }
 
-.super:hover{
-    cursor: pointer;
-}
-
 .sub {
     border: 2px solid cyan;
 }
 
-.sub:hover{
-    cursor: pointer;
-}
 .legend {
     margin: 10px;
     padding-left: 10px;
