--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -196,16 +196,20 @@ input[type=button]:hover {
     float:left;
     display:inline;
     width: 40%;
-    margin:5px;
-    height: 415px;
+    height: 100%;
     overflow: scroll;
     overflow-x: hidden;
+}
+
+.docoverlay {
+    height: 100%;
+    width: 100%;
 }
 
 #map{
     float:left;
     display:inline;
-    width: 55%;
+    width: 60%;
 }
 
 #map-frame{
