--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -201,6 +201,10 @@ input[type=button]:hover {
     overflow-x: hidden;
 }
 
+#doclabel{
+    width: 100%;
+}
+
 .docoverlay {
     height: 100%;
     width: 100%;
