--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -13,7 +13,7 @@
     <body>
         <div id="search-bar">
             <input id="code-name" type="text" placeholder="ICD Code">
-            <input type="button" id="search-button" value="Suchen">
+            <i id="search-button" class="icon-search icon-large"></i>
             <div class="hide-arrow">
                 <select name="lang" id="lang" size="1">
                     <option value="de">Deutsch</option>
