--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -39,7 +39,7 @@ div.node {
     border: 3px double blue;
 }
 
-.cat:hover, .super:hover, .sub:hover {
+.cat:hover, .sub:hover {
     cursor: pointer;
 }
 
@@ -246,4 +246,8 @@ input[type=button]:hover {
 #doclist label:hover {
     background-color: #666 !important;
     color: #fff !important;
+}
+
+.clickable:hover {
+    cursor: pointer;
 }
