--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -156,8 +156,17 @@ div.node, div.legend {
 
   #search-button {
     margin-left: 16px;
-    margin-top: 10px;
+    margin-top: 12px;
+    padding-top: 3px;
     float: left;
+    @include clickable;
+  }
+
+  #location {
+    margin-left: 500px;
+    margin-top: 16px;
+    float: left;
+    font-size: 0.8em;
   }
 
   #lang {
