--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -11,6 +11,7 @@
         <div id="search-bar">
             <input id="code-name" type="text" placeholder="ICD Code">
             <i id="search-button" class="icon-search icon-large clickable"></i>
+            <p id="location" class="icon-globe"></p>
             <div class="hide-arrow">
                 <select name="lang" id="lang" size="1">
                     <option value="de">Deutsch</option>
