--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -262,7 +262,7 @@ input[type=button] {
   }
 }
 
-.docoverlay {
+.docOverlay {
   height: 100%;
   width: 100%;
 
@@ -278,7 +278,7 @@ input[type=button] {
     }
   }
 
-  #doclist {
+  #docList {
     float:left;
     display:inline;
     width: 40%;
