Allow user to set location based on map. Fixes #160.

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -188,6 +188,7 @@ div.node, div.legend {
     margin-top: 16px;
     float: left;
     font-size: 0.8em;
+    @include clickable;
   }
   #location-config {
     margin-top: 16px;
