--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -17,7 +17,8 @@ html, body {
 body {
   background: #fff;
   padding: 0;
-  font-family: sans-serif;
+  font-family: Verdana ,sans-serif;
+  font-size: 12px;
 }
 
 /* sets the radius for all vendor-prefixes (and unprefixed) */
@@ -52,11 +53,13 @@ div.node, div.legend {
 
   &.syn {
     @include node-border(black);
+    text-align: left;
   }
 
   &.field {
     @include node-border(blue);
     @include clickable;
+    max-width: 180px;
   }
 
   &.drg {
