--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -12,7 +12,7 @@
             <input id="code-name" type="text" placeholder="ICD Code">
             <p id="search-button" class="icon-search icon-large clickable"></p>
             <div id="location-container">
-                <p id="location" class="icon-globe"></p>
+                <p id="location"></p>
                 <p id="location-config" class="icon-cogs clickable"></p>
             </div>
             <div class="hide-arrow">
