resize the font in the admin panel

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -119,6 +119,10 @@ div.node, div.legend {
    margin-bottom: 3px;
  }
 
+ .provider{
+   font-size: 1.25em;
+ }
+
  .admin-slider{
    margin-top: 3px;
  }
