--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -331,13 +331,13 @@ input[type=button] {
 
 .relatedness-container{
   width: 100px;
-  height:  10px;
-  border: darkblue 1px solid;
-  margin: 3px auto 3px auto;
+  height:  5px;
+  border: #49d 1px solid;
+  margin: 6px auto 6px auto;
 }
 
 .relatedness-display{
-  background: darkblue;
+  background: #49d;
   height: 100%;
 }
 
