Unite location edit dialogs.

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -198,17 +198,11 @@ div.node, div.legend {
     @include clickable;
   }
 
-  #location {
+  .location {
     margin-top: 16px;
     float: left;
     font-size: 0.8em;
     @include clickable;
-  }
-  #location-config {
-    margin-top: 16px;
-    margin-left: 20px;
-    float: left;
-    font-size: 0.8em;
   }
 
   #location-container{
