--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -12,8 +12,7 @@
             <input id="code-name" type="text" placeholder="ICD Code">
             <p id="search-button" class="icon-search icon-large clickable"></p>
             <div id="location-container">
-                <p id="location"></p>
-                <p id="location-config" class="icon-cogs clickable"></p>
+                <p class="location"></p>
             </div>
             <div class="hide-arrow">
                 <select name="lang" id="lang" size="1">
