--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -93,6 +93,8 @@ div.node, div.legend {
     font-weight: 500;
     z-index: 10;
     max-width: 300px;
+    min-width: 200px;
+    min-height: 100px;
   }
 }
 
