--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -90,11 +90,13 @@ div.node, div.legend {
     @include node-border(#e3e3e3);
     @include border-radius(5px);
     font-size: 20px;
-    font-weight: 500;
     z-index: 10;
     max-width: 300px;
     min-width: 200px;
     min-height: 100px;
+    display: table-cell;
+    vertical-align: middle;
+
   }
 }
 
