--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -12,7 +12,9 @@
             <input id="code-name" type="text" placeholder="ICD Code">
             <p id="search-button" class="icon-search icon-large clickable"></p>
             <div id="location-container">
+              <div id="location-inner">
                 <p class="location"></p>
+              </div>
             </div>
             <div class="hide-arrow">
                 <select name="lang" id="lang" size="1">
