--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -107,11 +107,10 @@ div.node, div.legend {
 
 /* the bow with the legend and the admin panel*/
 #panels {
-  width:  210px;
-  position: absolute;
-  top: 50px;
-  right: 0;
-  z-index: 10;
+  width: 0;
+  display: block;
+  float: right;
+  overflow: hidden;
 }
 
 /* the admin panel */
@@ -121,6 +120,7 @@ div.node, div.legend {
   @include border-radius(7px);
   font-size: 0.8em;
   padding: 0 10px 0 10px;
+  position: relative;
 
  p{
    margin-bottom: 3px;
@@ -147,6 +147,7 @@ div.node, div.legend {
   border: 1px dashed #c5c5c5;
   @include border-radius(7px);
   padding: 0 10px 0 10px;
+  position: relative;
 
   /* the items of the legend */
   .legend {
@@ -157,6 +158,30 @@ div.node, div.legend {
   }
 
 
+}
+
+#panels-container{
+  max-width:  250px;
+  position: absolute;
+  top: 50px;
+  right: 0;
+  z-index: 10;
+}
+
+#hide-panels{
+  display: inline-table;
+  position: absolute;
+  top: 130px;
+  right: -69px;
+  background: #f5f5f5;
+  width: 167px;
+  height: 30px;
+  z-index: 2;
+  text-align: center;
+  @include border-radius(5px);
+  border: 1px #ccc dashed;
+  vertical-align: middle;
+  border-bottom: none;
 }
 
 .title{
