--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -25,15 +25,18 @@
                 </select>
             </div>
         </div>
-        <div id="panels">
-          <div id="legend">
-            <div id="legend-title" class="title clickable"></div>
-            <div id="legend-text"></div>
-          </div>
-          <div id="admin">
-            <div id="admin-title" class="title clickable"><p>Admin panel</p></div>
-            <div id="admin-text"></div>
-          </div>
+        <div id="hide-panels" class="clickable"></div>
+        <div id="panels-container">
+            <div id="panels">
+              <div id="legend">
+                <div id="legend-title" class="title clickable"></div>
+                <div id="legend-text"></div>
+              </div>
+              <div id="admin">
+                <div id="admin-title" class="title clickable"><p>Admin panel</p></div>
+                <div id="admin-text"></div>
+              </div>
+            </div>
         </div>
         <div id="mindmap"></div>
     </body>
